--- a/frontend-my-food-delivery/package.json
+++ b/frontend-my-food-delivery/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
